<resources>
    <string name="app_name">Repair It</string>
    <string name="my_profile">My Profile</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_all_vehicles_you_own">Add all vehicles you own.</string>
    <string name="get_quotation">Get Quotation</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="bring_in_your_car_when_you_are_ready">Bring in your car when you are ready</string>
    <string name="evaluate_the_cost_of_your_vehicles_damage">Evaluate the cost of your vehicles damage</string>
    <string name="customize_your_personal_profile">Customize your personal profile</string>
    <string name="todo1">profile</string>
    <string name="todo2">vehicle</string>
    <string name="todo3">quotation</string>
    <string name="todo4">appointment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quotation_details">Quotation Details</string>
    <string name="vModel">Vehicle Model</string>
    <string name="jobAppointed">Job Appointed</string>
    <string name="damage">Damage Description</string>
    <string name="newQuoAddBtn">add</string>
    <string name="newQuoBackBtn">back</string>
    <string name="NewQuotaiton">Get New Quotation</string>
    <string name="quoNewQuoBtn">new quotation</string>
    <string name="your_quotations">Your Quotations</string>
    <string name="quoDetailsUpdate">update</string>
    <string name="quoDetailsDelete">delete</string>

    <string-array name="vehicleList">
        <item>Toyota</item>
        <item>Mitsubishi</item>
        <item>Mazda</item>
        <item>Nissan</item>
    </string-array>

    <string name="viewQuo1">View Quotation 1</string>
    <string name="addAppointmentAddBtn">Add</string>
    <string name="addAppointmentBackBtn">Back</string>
    <string name="UpadateAppointmentUpdateBtn">update</string>
    <string name="updateAppointmentDeleteBtn">delete</string>
    <string name="updateAppointmentBackBtn">back</string>
    <string name="addAppVehicle">Enter your vehicle here</string>
    <string name="addAppJob">Enter the job here</string>
    <string name="addAppDate">Enter the Date</string>
    <string name="updateAppVehicle">Enter your Vehicle here</string>
    <string name="updateAppJob">Enter the job here</string>
    <string name="updateAppDate">Enter the date</string>
    <string name="appointmentNewBtn">add appointment</string>
    <string name="userProfileupdateBtn">update</string>
    <string name="userProdfleDeleteBtn">delete account</string>
    <string name="userProfile">back</string>
    <string name="profileUpdateBtn">update details</string>
    <string name="YourVehicle">Your Vehicles</string>
    <string name="yourVeh">Your Vehicles</string>
    <string name="viewVehicle1">View Vehicle 1</string>
    <string name="addVehicle">add new vehicle</string>

    <!--Contact Form-->

    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="aboutusname">Repair It</string>
    <string name="tcRepairIt">Terms and Conditions</string>
    <string name="addquoModel">Vehicle Model</string>
    <string name="addquocameraBtn">Choose Image</string>
</resources>
