<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddQuotation"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="282dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/NewQuotaiton"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/addQuoVNoET"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:entries="@array/vehicleList"
        android:hint="Vehicle No"
        android:inputType="text" />



    <EditText
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/addQuotationVModelET"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/vModel"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_gravity="center"
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/chooseFileAddQuotation"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="0dp"
            android:text="@string/addquocameraBtn" />

        <ImageView
            android:background="@drawable/ic_image_black_24dp"
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp" />


    </LinearLayout>


    <EditText
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/addQuojobAppointedET"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/jobAppointed"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <Button
        android:id="@+id/newQuoAddBtn"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:onClick="displayToastMsg"
        android:text="@string/newQuoAddBtn"
        app:layout_constraintTop_toBottomOf="@+id/addQuojobAppointedET" />

    <Button
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/newQuoBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/newQuoBackBtn" />


</LinearLayout>


</ScrollView>
