<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateAppointment"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Appointment Details"
        android:layout_marginTop="10dp"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="61dp" />

    <EditText
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:id="@+id/updateAppVehicleNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Vehicle No"
        android:inputType="textPersonName"
        android:text="PE 9801"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="122dp" />

    <EditText
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/updateAppVehicleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/updateAppVehicle"
        android:inputType="textPersonName"
        android:text="Honda Civic"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="122dp" />

    <EditText
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/updateAppJobText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addAppJob"
        android:inputType="textPersonName"
        android:text="Full Paint"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="196dp" />

    <EditText
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/updateAppDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/updateAppDate"
        android:inputType="date"
        android:text="8/6/2019"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="270dp" />

    <Button
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/updateAppUpdateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/UpadateAppointmentUpdateBtn"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="343dp" />


    <Button
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/updateAppBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/updateAppointmentBackBtn"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="497dp" />









</LinearLayout>