<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAppointment"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add New Appointment"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold"/>


    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/addAppointmentVNo"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Vehicle No"
        android:inputType="textPersonName"
        />


    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/addAppointmentVModel"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Vehicle Model"
        android:inputType="textPersonName"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/addAppJobET"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/addAppJob"
        android:inputType="textPersonName"/>

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/addAppDateET"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/addAppDate"
        android:inputType="date"/>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/addAppAddBtn"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:onClick="displayToastMsg"
        android:text="@string/addAppointmentAddBtn"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/addAppBackBtn"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/addAppointmentBackBtn" />



</LinearLayout>